Creación Ticket y modificación Fecha
Se agregó la clase Ticket y se generó validaciones en los Sets de la clase Fecha

--- a/TinyDesk/TinyDesk.cbp
+++ b/TinyDesk/TinyDesk.cbp
@@ -36,6 +36,10 @@
 		<Unit filename="App.h" />
 		<Unit filename="Fecha.cpp" />
 		<Unit filename="Fecha.h" />
+		<Unit filename="Ticket.cpp" />
+		<Unit filename="Ticket.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="TinyDesk.cbp" />
 		<Unit filename="TinyDesk.depend" />
 		<Unit filename="TinyDesk.layout" />
