Creacion Proyecto,Estado y modificacion Fecha
Se crearon las clases Proyecto y Estado con sus respectivos métodos y se agregó un constructor por sobrecarga a Fecha para generalizar los ingresos de las fechas de Inicio, Fin y Finalizada para usar en las demás clases necesarias.

--- a/TinyDesk/TinyDesk.cbp
+++ b/TinyDesk/TinyDesk.cbp
@@ -34,8 +34,16 @@
 		</Compiler>
 		<Unit filename="App.cpp" />
 		<Unit filename="App.h" />
+		<Unit filename="Estado.cpp" />
+		<Unit filename="Estado.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="Fecha.cpp" />
 		<Unit filename="Fecha.h" />
+		<Unit filename="Proyecto.cpp" />
+		<Unit filename="Proyecto.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="Ticket.cpp" />
 		<Unit filename="Ticket.h">
 			<Option target="&lt;{~None~}&gt;" />
