Modificacion de clase Sprint y creacion SprintManager
Se modificó la clase sprint agregando metodos de cargar fecha y nombre de los sprints y se agrego que tome el id del proyecto solo

--- a/TinyDesk/TinyDesk.cbp
+++ b/TinyDesk/TinyDesk.cbp
@@ -49,6 +49,14 @@
 		<Unit filename="Sprint.h">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
+		<Unit filename="SprintArchivo.cpp" />
+		<Unit filename="SprintArchivo.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="SprintManager.cpp" />
+		<Unit filename="SprintManager.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="Ticket.cpp" />
 		<Unit filename="Ticket.h">
 			<Option target="&lt;{~None~}&gt;" />
